# tactics_game

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  deploy_linux.sh
assets/maps/city/: 0.layer  1.layer  map.json
assets/maps/demo/: 0.layer  1.layer  2.layer  map.json
assets/maps/small_example/: 0.layer  map.json
assets/models/: climber.mtl  grid.mtl  map.mtl  player1.mtl  player2.mtl
assets/shaders/: fow.frag  fow.vert  lamp.frag  lamp.vert  main.frag  main.vert  simple_color.vert
cmake/: FindVLD.cmake
desktop/: tactics_game  tactics_game.desktop
libs/include/glad/: glad.h
libs/include/irrxml/: irrArray.h  irrString.h
libs/include/plog/: Log.h
libs/src/: glad.c
src/: main.cpp
src/application/: application.cpp  application.h  assets_manager.cpp  assets_manager.h  game_application.cpp  game_application.h  input_manager.cpp  input_manager.h
src/graphics/: color.h  graphics_object.cpp  graphics_object.h  sdl_window.cpp  sdl_window.h  shader_program.cpp  shader_program.h  window.h
src/graphics/model/: bo.cpp  bo.h  buffered_graphics_object.cpp  buffered_graphics_object.h  buffered_light_object.cpp  buffered_light_object.h  buffered_mesh.cpp  buffered_mesh.h  buffered_model.cpp  buffered_model.h  buffered_simple_color_object.cpp  buffered_simple_color_object.h  free_roam_camera.cpp  free_roam_camera.h  graphics_object.cpp  graphics_object.h  light_object.cpp  light_object.h  lights.cpp  lights.h  mesh.cpp  mesh.h  model.cpp  model.h  simple_color_object.cpp  simple_color_object.h  top_camera.cpp  top_camera.h  vao.cpp  vao.h
src/graphics/model/buffered_object/: buffered_graphics_object.cpp  buffered_graphics_object.h  buffered_mesh.h  buffered_model.h  buffered_simple_color_object.h
src/graphics/model/buffers/: bo.cpp  bo.h  vao.cpp  vao.h
src/graphics/model/camera/: camera_observer.h  free_roam_camera.cpp  free_roam_camera.h  top_camera.cpp  top_camera.h
src/graphics/model/object/: graphics_object.cpp  graphics_object.h  mesh.h  model.cpp  model.h  simple_color_object.cpp
src/graphics/model/texture/: quad_xz.cpp  quad_xz.h  texture.cpp  texture.h
src/graphics/objects/: graphics_object.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
src/graphics/shader/: shader.cpp  shader.h  shader_program.cpp  shader_program.h
src/graphics/window/: sdl_window.cpp  sdl_window.h  window.h
src/libs/include/glad/: glad.h
src/libs/src/: glad.c
src/logger/: logger.cpp  logger.h
src/logic/: game.cpp  game.h  game_map.cpp  game_map.h  game_scene.cpp  game_scene.h  game_unit.cpp  game_unit.h  line_of_sight_finder.cpp  line_of_sight_finder.h  path_finder.cpp  path_finder.h  player.cpp  player.h
src/logic/rendering/: fow_renderer.cpp  fow_renderer.h  game_map_renderer.cpp  game_map_renderer.h  game_scene_renderer.cpp  game_scene_renderer.h  light_objects_renderer.cpp  light_objects_renderer.h  player_renderer.cpp  player_renderer.h  ui_renderer.cpp  ui_renderer.h  unit_renderer.cpp  unit_renderer.h
src/misc/: custom_log.cpp  custom_log.h  utils.cpp  utils.h
src/services/: services.cpp  services.h
src/services/assets/: assets_service.h  assets_service_impl.cpp  assets_service_impl.h  null_assets_service.h
src/services/resources/: resources_manager.h  resources_manager_impl.cpp  resources_manager_impl.h  resources_manager_null.h
test_perf_maps/test_perf_1/: 5.layer  map.json
test_perf_maps/test_perf_2/: 0.layer  map.json
test_perf_maps/test_perf_3/: 0.layer  map.json
